Arranque de la app

--- a/SistemaReparto/hdr.html
+++ b/SistemaReparto/hdr.html
@@ -75,7 +75,7 @@
                             </div>
                             <!-- end Topbar -->
                 
-                    <div class="topnav">
+                    <div class="topnav" id="topnav" style="display:none">
                         <div class="container-fluid">
                             <nav class="navbar navbar-dark navbar-expand-lg topnav-menu">        
                                 <div class="collapse navbar-collapse" id="topnav-menu-content">
