Update login de ingreso.

--- a/SistemaReparto/hdr.html
+++ b/SistemaReparto/hdr.html
@@ -170,7 +170,7 @@
                                     <p class="text-muted mb-4">Ingrese su Usuario y Contraseña.</p>
                                 </div>
 
-                                <form action="" class="needs-validation">
+                                <form id="loginForm" action="#" class="needs-validation" novalidate>
                                     <div class="mb-3">
                                         <label for="user" class="form-label">Usuario</label>
                                         <input class="form-control" type="text" id="user" name="user" required="" placeholder="Ingrese su Usuario">
@@ -190,7 +190,8 @@
                                     </div>
 
                                     <div class="mb-3 mb-0 text-center">
-                                      <a class="btn btn-primary" id="ingreso"> Ingresar </a>
+                                      <!-- <a class="btn btn-primary" id="ingreso"> Ingresar </a> -->
+                                      <button type="button" class="btn btn-primary" id="ingreso">Ingresar</button>
                                     </div>
 
                                 </form>
