banner para instalar la app

--- a/SistemaReparto/hdr.html
+++ b/SistemaReparto/hdr.html
@@ -25,6 +25,18 @@
         <link href="css/hdr.css" rel="stylesheet" type="text/css" />
     </head>     
     <body class="loading" data-layout="topnav" data-layout-config='{"navbar":false,"layoutBoxed":false,"darkMode":false}'>
+        <div id="installBanner" style="display:none;" class="card shadow-sm position-fixed bottom-0 start-0 end-0 m-3">
+            <div class="card-body d-flex align-items-center justify-content-between gap-2">
+                <div>
+                <div class="fw-bold">Instalá Caddy Reparto</div>
+                <div class="text-muted small">Más rápido y sin pestañas.</div>
+                </div>
+                <div class="d-flex gap-2">
+                <button id="btnInstallLater" class="btn btn-light btn-sm">Más tarde</button>
+                <button id="btnInstallNow" class="btn btn-primary btn-sm">Instalar</button>
+                </div>
+            </div>
+            </div>
         <!-- Begin page -->
         <div class="wrapper">
             <!-- ============================================================== -->
