--- a/SistemaReparto/hdr.html
+++ b/SistemaReparto/hdr.html
@@ -71,13 +71,12 @@
                                                 </div>
                                             </div>
                                         </li>
-                                        <!-- <li class="dropdown notification-list">
-                                            <a class="nav-link dropdown-toggle arrow-none" data-bs-toggle="dropdown" href="#" id="topbar-notifydrop" role="button" aria-haspopup="true" aria-expanded="false">
-                                                <i class="dripicons-bell noti-icon"></i>
+                                        <li class="dropdown notification-list">
+                                            <a class="nav-link arrow-none position-relative" href="#" id="btnInstallBell" role="button" aria-label="Instalar app">
+                                                <i class="dripicons-bell noti-icon"></i>                                            
                                                 <span class="noti-icon-badge"></span>
                                             </a>
-
-                                        </li> -->
+                                        </li>
                                     </ul>
                                     <a class="navbar-toggle"  data-bs-toggle="collapse" data-bs-target="#topnav-menu-content">
                                         <div class="lines">
@@ -433,6 +432,6 @@
         
         <!-- <script src="Proceso/js/mail.js"></script> -->
         <script src="Proceso/js/colecta_scan.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
   </body>
 </html>
