--- a/SistemaReparto/hdr.html
+++ b/SistemaReparto/hdr.html
@@ -432,6 +432,6 @@
         
         <!-- <script src="Proceso/js/mail.js"></script> -->
         <script src="Proceso/js/colecta_scan.js"></script>
-
+        <script src="Proceso/js/app_status.js"></script>
   </body>
 </html>
