--- a/SistemaReparto/warehouse.html
+++ b/SistemaReparto/warehouse.html
@@ -163,7 +163,7 @@
               </div>
         <div class="d-grid gap-2 mb-3">
           <button class="btn btn-primary btn-lg" onclick="irAScan()">
-            📷 Iniciar escaneo de bultos
+             <i class="mdi mdi-qrcode-scan"></i> Iniciar escaneo de bultos
           </button>
         </div>
 
