--- a/SistemaReparto/hdr.html
+++ b/SistemaReparto/hdr.html
@@ -50,8 +50,8 @@
             <!-- ============================================================== -->
             <!-- Start Page Content here -->
             <!-- ============================================================== -->
-            <div class="content-page">
-                <div class="content">
+            <!-- <div class="content-page"> -->
+                <!-- <div class="content"> -->
                     <div class="content-page">
                         <div class="content">
                             <!-- Topbar Start -->
@@ -96,7 +96,7 @@
                                 </div>
                             </div>
                             <!-- end Topbar -->
-                <!-- Modal: Escaneo Colecta -->
+                    <!-- Modal: Escaneo Colecta -->
                     <div class="modal fade" id="colectaScanModal" tabindex="-1" aria-hidden="true">
                         <div class="modal-dialog modal-dialog-centered modal-md">
                             <div class="modal-content">
@@ -167,7 +167,7 @@
                                   <h4 id="info-alert-modal-header" class="mt-2">Actualizando...</h4>
                                   <p id="info-alert-body" class="mt-3"></p>
                                   <div class="spinner-grow text-primary" role="status"></div>
-<!--                                   <button type="button" class="btn btn-info my-2" data-dismiss="modal">Continue</button> -->
+                        <!--                                   <button type="button" class="btn btn-info my-2" data-dismiss="modal">Continue</button> -->
                                 </div>
                             </div>
                         </div><!-- /.modal-content -->
@@ -283,9 +283,9 @@
                                         <li class="mb-2">
                                             <p class="text-muted mb-1 font-13">
                                                 <i class="mdi mdi-fountain-pen-tip"> </i> ITEMS  <span class="badge bg-success" id="totalt"> 0 </span>
-                                                <!-- <div class="float-end"> -->
+                                                
                                                     <i id="btnEscanear" class="mdi mdi-24px mdi-barcode-scan text-primary mr-0 float-end"></i>
-                                                <!-- </div> -->
+                                                
                                             </p>
                                             <div class="input-group input-group-merge">
                                                 <select id="prueba" name="codigo[]" class="select2 form-control select2-multiple" data-toggle="select2" multiple="multiple" data-placeholder="Seleccione ..."></select>
