--- a/SistemaReparto/hdr.html
+++ b/SistemaReparto/hdr.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
     <html lang="es">
     <head>
-        <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
-        <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1"/>
         <title>Reparto Caddy | Panel Visual </title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta content="A fully featured admin theme which can be used to build CRM, CMS, etc." name="description" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">        <meta content="A fully featured admin theme which can be used to build CRM, CMS, etc." name="description" />
         <meta content="Coderthemes" name="author" />
         <meta name="theme-color" content="#111827">
         <link rel="manifest" href="pwa/manifest.webmanifest">
