--- a/SistemaReparto/hdr.html
+++ b/SistemaReparto/hdr.html
@@ -2,7 +2,9 @@
     <html lang="es">
     <head>
         <title>Reparto Caddy | Panel Visual </title>
-        <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">        <meta content="A fully featured admin theme which can be used to build CRM, CMS, etc." name="description" />
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">       
+        <meta content="Sistema de Gestion de envíos Caddy." name="description" />
         <meta content="Coderthemes" name="author" />
         <meta name="theme-color" content="#111827">
         <link rel="manifest" href="pwa/manifest.webmanifest">
