--- a/SistemaReparto/hdr.html
+++ b/SistemaReparto/hdr.html
@@ -29,6 +29,25 @@
         height: auto !important;
         object-fit: cover !important;
         }
+        /* MOBILE: acercar lupa a campana */
+        /* MOBILE: evitar que los badges bajen de línea */
+@media (max-width: 576px) {
+
+  #navbar .page-title {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    white-space: nowrap;
+  }
+
+  #navbar .page-title .badge {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    line-height: 1;
+  }
+
+}
     </style>    
 
     <body class="loading" data-layout="topnav" data-layout-config='{"navbar":false,"layoutBoxed":false,"darkMode":false}'>
@@ -55,14 +74,70 @@
                         <div class="content">
                             <!-- Topbar Start -->
                             <div class="navbar-custom topnav-navbar" id="navbar" style="display:none">
-                                <div class="container-fluid">
-                                    <ul class="list-unstyled topbar-menu float-end mb-0">
+                            <div class="container-fluid d-flex align-items-center justify-content-between">
+
+                                <!-- ÚNICO botón menú -->
+                                <a class="navbar-toggle" data-bs-toggle="collapse" data-bs-target="#topnav-menu-content" aria-label="Abrir menú">
+                                <div class="lines">
+                                    <span></span><span></span><span></span>
+                                </div>
+                                </a>
+
+                                <ul class="list-unstyled topbar-menu mb-0 d-flex align-items-center gap-2">
+                                    <li class="dropdown notification-list mt-0">
+                                        <h4 class="page-title mb-0">
+                                        <span class="badge bg-warning text-light" id="hdr-header"></span>
+                                        <span id="badge-total" class="badge bg-secondary text-light">0</span>
+                                        <span id="badge-entregados" class="badge bg-danger text-light">0</span>
+                                        <span id="badge-sinentregar" class="badge bg-success text-light">0</span>
+                                        </h4>
+                                    </li>
+
+                                    <li class="dropdown notification-list mr-0">
+                                        <a class="nav-link dropdown-toggle arrow-none" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="false" aria-expanded="false">
+                                        <i class="dripicons-search noti-icon"></i>
+                                        </a>
+                                        <div class="dropdown-menu dropdown-menu-animated dropdown-lg p-0">
+                                        <div class="p-3">
+                                            <input id="buscarnombre" type="text" class="form-control" placeholder="Search ..." aria-label="Buscar...">
+                                                <div class="modal-footer">
+                                                <button type="button" class="btn btn-light" data-bs-dismiss="modal">Cancelar</button>
+                                                <button id="btn-search" type="button" class="btn btn-primary">Aceptar</button>
+                                            </div>
+                                        </div>
+                                        </div>
+                                    </li>
+
+                                <li class="dropdown notification-list">
+                                    <a class="nav-link arrow-none position-relative" href="#" id="btnInstallBell" role="button" aria-label="Instalar app">
+                                    <i class="dripicons-bell noti-icon"></i>
+                                    <span class="noti-icon-badge"></span>
+                                    </a>
+                                </li>
+                                </ul>
+
+                            </div>
+                            </div>
+
+
+
+
+                            <!-- <div class="navbar-custom topnav-navbar" id="navbar" style="display:none">
+                                <div class="container-fluid d-flex align-items-center justify-content-between">
+                                   
+                                    <a class="navbar-toggle" data-bs-toggle="collapse" data-bs-target="#topnav-menu-content" aria-label="Abrir menú">
+                                        <div class="lines">
+                                            <span></span><span></span><span></span>
+                                        </div>
+                                    </a>
+                                    <ul class="list-unstyled topbar-menu mb-0 d-flex align-items-center gap-2">
                                         <li class="dropdown notification-list mt-2">
-                                            <h4 class="page-title"> <span class="badge bg-warning text-light" id="hdr-header"> </span> 
-                                                <span id="badge-total" class="badge bg-secondary text-light">0</span>     
-                                                <span id="badge-entregados" class="badge bg-danger text-light">0</span> 
-                                                <span id="badge-sinentregar" class="badge bg-success text-light">0</span> 
-                                            </h4>  
+                                            <h4 class="page-title mb-0">
+                                            <span class="badge bg-warning text-light" id="hdr-header"></span>
+                                            <span id="badge-total" class="badge bg-secondary text-light">0</span>
+                                            <span id="badge-entregados" class="badge bg-danger text-light">0</span>
+                                            <span id="badge-sinentregar" class="badge bg-success text-light">0</span>
+                                            </h4>
                                         </li>
                                         <li class="dropdown notification-list mr-0">
                                             <a class="nav-link dropdown-toggle arrow-none" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="false" aria-expanded="false">
@@ -93,7 +168,7 @@
                                         </div>
                                     </a>
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- end Topbar -->
                     <!-- Modal: Escaneo Colecta -->
                     <div class="modal fade" id="colectaScanModal" tabindex="-1" aria-hidden="true">
