--- a/SistemaReparto/hdr.html
+++ b/SistemaReparto/hdr.html
@@ -474,9 +474,8 @@
         <!-- Tus scripts -->
         <script src="pwa/js/pwa.js"></script>
         <script src="Proceso/js/funciones_hdr.js"></script>
+        <script src="Proceso/js/mail.js"></script>
         <script src="Proceso/js/dropzone.js"></script>
-        
-        <!-- <script src="Proceso/js/mail.js"></script> -->
         <script src="Proceso/js/colecta_scan.js"></script>
         <script src="Proceso/js/app_status.js"></script>
   </body>
