--- a/SistemaReparto/hdr.html
+++ b/SistemaReparto/hdr.html
@@ -154,7 +154,7 @@
 
                             <div class="modal-body">
                                 <div class="mb-2">
-                                <span class="badge bg-secondary">Código Esperado:</span>
+                                <span class="badge bg-secondary">Esperado:</span>
                                 <span class="badge bg-primary" id="colecta-expected">–</span>
                                 </div>
 
