--- a/SistemaReparto/hdr.html
+++ b/SistemaReparto/hdr.html
@@ -145,8 +145,8 @@
                             
                             <!-- end Topbar -->
                     <!-- Modal: Escaneo Colecta -->
-                    <!-- <div class="modal fade" id="colectaScanModal" tabindex="-1" aria-hidden="true"> -->
-                     <div id="colectaScanModal" tabindex="-1" aria-hidden="true"></div>
+                    <div class="modal fade" id="colectaScanModal" tabindex="-1" aria-hidden="true">
+                     <!-- <div id="colectaScanModal" tabindex="-1" aria-hidden="true"></div> -->
                         <div class="modal-dialog modal-dialog-centered modal-md">
                             <div class="modal-content">
                             <div class="modal-header">
