--- a/SistemaReparto/hdr.html
+++ b/SistemaReparto/hdr.html
@@ -24,75 +24,46 @@
         <link href="css/hdr.css" rel="stylesheet" type="text/css" />
     </head> 
     <style>
-        #qr-reader video {
-        width: 100% !important;
-        height: auto !important;
-        object-fit: cover !important;
-        }
-        /* MOBILE: acercar lupa a campana */
-        /* MOBILE: evitar que los badges bajen de línea */
-@media (max-width: 576px) {
+            #qr-reader video {
+            width: 100% !important;
+            height: auto !important;
+            object-fit: cover !important;
+            }
+            /* MOBILE: acercar lupa a campana */
+            /* MOBILE: evitar que los badges bajen de línea */
+            @media (max-width: 576px) {
 
-  #navbar .page-title {
-    display: flex;
-    align-items: center;
-    gap: 4px;
-    white-space: nowrap;
-  }
+            #navbar .page-title {
+            display: flex;
+            align-items: center;
+            gap: 4px;
+            white-space: nowrap;
+            }
 
-  #navbar .page-title .badge {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    line-height: 1;
-  }
+            #navbar .page-title .badge {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            line-height: 1;
+            }
 
-}
-/* COLECTA: darle un viewport real al video (evita blur por reescalado) */
-#colecta-qr-reader {
-  width: 100% !important;
-  height: 60vh;              /* buen tamaño sin estirar raro */
-  overflow: hidden;
-}
+            }
+            /* COLECTA: contenedor cuadrado (tu stream es 1080x1080) */
+            #colecta-qr-reader{
+            width: 100% !important;
+            max-width: 420px;
+            margin: 0 auto;
+            aspect-ratio: 1 / 1;
+            overflow: hidden;
+            }
 
-#colecta-qr-reader video {
-  width: 100% !important;
-  height: 100% !important;
-  object-fit: cover !important;
-  transform: translateZ(0);
-}
-
-/* iOS + Bootstrap modal: a veces aplica transforms que “suavizan” el video */
-#colectaScanModal .modal-dialog,
-#colectaScanModal .modal-content {
-  transform: none !important;
-  filter: none !important;
-}
-/* 1) Neutraliza blur por transform del modal en iOS */
-.modal .modal-dialog,
-.modal.show .modal-dialog,
-.modal.fade .modal-dialog {
-  transform: none !important;
-  -webkit-transform: none !important;
-  transition: none !important;
-}
-
-/* 2) Hacemos el reader cuadrado (porque tu stream es 1080x1080) */
-#colecta-qr-reader {
-  width: 100% !important;
-  max-width: 420px;
-  margin: 0 auto;
-  aspect-ratio: 1 / 1;     /* <-- clave */
-  overflow: hidden;
-}
-
-/* 3) Video ocupa el cuadrado completo */
-#colecta-qr-reader video {
-  width: 100% !important;
-  height: 100% !important; /* <-- NO auto */
-  object-fit: cover !important;
-  display: block;
-}
+            /* Video ocupa todo el cuadrado */
+            #colecta-qr-reader video{
+            width: 100% !important;
+            height: 100% !important;
+            object-fit: cover !important;
+            display: block;
+            }
     </style>    
 
     <body class="loading" data-layout="topnav" data-layout-config='{"navbar":false,"layoutBoxed":false,"darkMode":false}'>
@@ -113,8 +84,6 @@
             <!-- ============================================================== -->
             <!-- Start Page Content here -->
             <!-- ============================================================== -->
-            <!-- <div class="content-page"> -->
-                <!-- <div class="content"> -->
                     <div class="content-page">
                         <div class="content">
                             <!-- Topbar Start -->
@@ -161,18 +130,10 @@
                                 </li>
                                 </ul>
 
-                            </div>
-                            </div>
-
-
-
-
-                            
-                            <!-- end Topbar -->
-                    <!-- Modal: Escaneo Colecta -->
-                    <!-- <div class="modal fade" id="colectaScanModal" tabindex="-1" aria-hidden="true"> -->
-                     <!-- <div id="colectaScanModal" tabindex="-1" aria-hidden="true"></div> -->
-                      <!-- <div class="modal" id="colectaScanModal" tabindex="-1" aria-hidden="true"></div>
+                        </div>
+                    </div>
+             
+                    <div class="modal" id="colectaScanModal" tabindex="-1" aria-hidden="true">
                         <div class="modal-dialog modal-dialog-centered modal-md">
                             <div class="modal-content">
                             <div class="modal-header">
@@ -186,10 +147,9 @@
                                 <span class="badge bg-primary" id="colecta-expected">–</span>
                                 </div>
 
-                                <div id="colecta-feedback" class="mb-2"></div> -->
+                                <div id="colecta-feedback" class="mb-2"></div>
 
-                                <!-- <div id="colecta-qr-reader" style="width:100%; max-width:420px; margin:0 auto;"></div> -->
-                            <!-- <div id="colecta-qr-reader"></div>
+                                <div id="colecta-qr-reader"></div>
                             </div>
 
                             <div class="modal-footer">
@@ -197,34 +157,8 @@
                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
                             </div>
                             </div>
-                        </div> -->
-                    <!-- </div> -->
-<div class="modal" id="colectaScanModal" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-md">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Escanear bulto (colecta)</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
-      </div>
-
-      <div class="modal-body">
-        <div class="mb-2">
-          <span class="badge bg-secondary">Esperado:</span>
-          <span class="badge bg-primary" id="colecta-expected">–</span>
-        </div>
-
-        <div id="colecta-feedback" class="mb-2"></div>
-
-        <div id="colecta-qr-reader"></div>
-      </div>
-
-      <div class="modal-footer">
-        <button type="button" class="btn btn-danger" id="btnStopColectaScan">Detener</button>
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-      </div>
-    </div>
-  </div>
-</div>
+                        </div>
+                    </div>
 
                     <div class="topnav" id="topnav" style="display:none">
                         <div class="container-fluid">
