--- a/SistemaReparto/hdr.html
+++ b/SistemaReparto/hdr.html
@@ -200,7 +200,7 @@
                                     </div>
                                     <div class="mb-3 mb-0 text-center">
                                       <div class="d-grid mt-4">   
-                                        <button type="submit" class="btn btn-caddy"  id="ingreso">Ingresar</button>                                     
+                                        <button type="submit" class="btn btn-caddy w-100"  id="ingreso">Ingresar</button>                                     
                                         
                                         </div>                                      
                                     </div>
