--- a/SistemaReparto/hdr.html
+++ b/SistemaReparto/hdr.html
@@ -3,10 +3,12 @@
     <head>
         <title>Reparto Caddy | Panel Visual </title>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">       
+        <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, viewport-fit=cover">       
         <meta content="Sistema de Gestion de envíos Caddy." name="description" />
         <meta content="Coderthemes" name="author" />
         <meta name="theme-color" content="#111827">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="default">
         <link rel="manifest" href="pwa/manifest.webmanifest">
         <!-- App favicon -->
         <link rel="shortcut icon" href="images/favicon.ico">
