--- a/SistemaReparto/hdr.html
+++ b/SistemaReparto/hdr.html
@@ -57,7 +57,7 @@
                                 </div>
                                 </a>
 
-                                <ul class="list-unstyled topbar-menu mb-0 d-flex align-items-center gap-2">
+                                <ul class="list-unstyled topbar-menu mb-0 d-flex align-items-center gap-0">
                                     <li class="dropdown notification-list mt-0">
                                         <h4 class="page-title mb-0">
                                         <span class="badge bg-warning text-light" id="hdr-header"></span>
@@ -81,16 +81,17 @@
                                         </div>
                                         </div>
                                     </li>
-
-                                <li class="dropdown notification-list">
-                                    <a class="nav-link arrow-none position-relative" href="#" id="btnInstallBell" role="button" aria-label="Instalar app">
-                                    <i class="dripicons-bell noti-icon"></i>
-                                    <span class="noti-icon-badge"></span>
-                                    </a>
-                                </li>
+                                    <li class="dropdown notification-list">
+                                        <a class="nav-link arrow-none" href="#" id="btnInstallBell" role="button" aria-label="Instalar app">
+                                        <i class="dripicons-bell noti-icon"></i>
+                                        <span class="noti-icon-badge"></span>
+                                        </a>
+                                    </li>
                                 </ul>
+                                </div>
+                            </div>
 
-                        </div>
+                        
                     </div>
              
                     <div class="modal" id="colectaScanModal" tabindex="-1" aria-hidden="true">
