--- a/SistemaReparto/hdr.html
+++ b/SistemaReparto/hdr.html
@@ -201,7 +201,7 @@
                                     <div class="mb-3 mb-0 text-center">
                                       <div class="d-grid mt-4">   
                                         <button type="submit" class="btn btn-caddy w-100"  id="ingreso">Ingresar</button>                                     
-                                        
+                                        <a class="text-muted" href="#"><small>v.1</small></a>
                                         </div>                                      
                                     </div>
                                 </form>
