--- a/SistemaReparto/hdr.html
+++ b/SistemaReparto/hdr.html
@@ -440,7 +440,7 @@
         <script src="Proceso/js/funciones_hdr.js"></script>
         <script src="Proceso/js/mail.js"></script>
         <script src="Proceso/js/dropzone.js"></script>
-        <script src="Proceso/js/colecta_scan.js?v=<?= time() ?>"></script>
+        <script src="Proceso/js/colecta_scan.js"></script>
         <script src="Proceso/js/app_status.js"></script>
   </body>
 </html>
