--- a/SistemaReparto/hdr.html
+++ b/SistemaReparto/hdr.html
@@ -161,68 +161,146 @@
           <main id="app-main" class="app-main">
             <!-- SCREEN: Operación -->
             <section class="container-fluid mt-2 app-screen" id="screen-operacion" style="display: none">
-              <!-- <div class="col-xl-7" id="card-envio" style="display: none"></div> -->
+              <!-- DESDE ACA CARD ENVIOS -->
+              <div class="row">
+                <div class="col-12 col-xl-7" id="card-envio">
+                  <div class="col-xl-7" id="card-envio">
+                    <div class="card">
+                      <div id="border-single-card" class="card border-primary border">
+                        <!-- AVISO CANCELAR COLECTA -->
+                        <div
+                          id="alert-cancelar-colecta"
+                          class="alert alert-warning text-center fw-bold mb-2"
+                          style="display: none"
+                        >
+                          ⚠️ CANCELAR COLECTA
+                        </div>
+                        <div class="card-body">
+                          <h2 class="header-title mb-3" id="posicioncliente"></h2>
+                          <i class="mdi mdi-card-search-outline"> </i><a id="card-seguimiento"></a>
+                          <i id="icon-servicio" class="mdi mdi-calendar"> </i><a id="card-servicio"></a>
+                          <div class="row">
+                            <div class="col-md-7">
+                              <ul class="list-unstyled">
+                                <li class="mb-2">
+                                  <p class="text-muted mb-1 font-15">
+                                    <i id="icon-direccion" class="mdi mdi-map-marker"> </i><a id="direccion"></a>
+                                  </p>
+                                </li>
+                                <div class="tab-content" id="botonera" style="display: none">
+                                  <div class="tab-pane show button-list active" id="block-buttons-preview">
+                                    <div class="d-grid">
+                                      <select class="form-select form-select-lg mb-3" id="razones">
+                                        <option value="" selected>Seleccione un motivo</option>
+                                        <option value="NADIE EN CASA">NADIE EN CASA</option>
+                                        <option value="DIRECCION EQUIVOCADA">DIRECCION EQUIVOCADA</option>
+                                        <option value="OTRAS RAZONES">OTRAS RAZONES</option>
+                                      </select>
+                                    </div>
+                                  </div>
+                                  <!-- end preview-->
+                                </div>
+                                <li class="mb-2" id="card-receptor-name">
+                                  <p class="text-muted mb-1 font-13">
+                                    <i class="mdi mdi-account"> </i> NOMBRE RECEPTOR
+                                  </p>
+                                  <input class="form-control" type="text" id="receptor-name" required />
+                                </li>
+                                <li class="mb-2" id="card-receptor-dni">
+                                  <p class="text-muted mb-1 font-13"><i class="mdi mdi-passport"> </i> DNI RECEPTOR</p>
+                                  <input class="form-control" type="number" id="receptor-dni" />
+                                </li>
 
-              <!-- CARD ENVIOS -->
-              <div class="card" id="border-single-card">
-                <div class="card-body">
-                  <div class="d-flex justify-content-between align-items-center mb-2">
-                    <div class="d-flex align-items-center gap-2">
-                      <i id="icon-servicio" class="mdi"></i>
-                      <span id="card-servicio" class="fw-bold"></span>
+                                <!-- ITEMS -->
+                                <div id="card-receptor-items" style="display: none">
+                                  <i class="mdi mdi-package-variant"></i> CANTIDAD <a id="card-receptor-cantidad"> </a>
+
+                                  <li class="mb-2">
+                                    <p class="text-muted mb-1 font-13">
+                                      <i class="mdi mdi-fountain-pen-tip"> </i> ITEMS
+                                      <span class="badge bg-success" id="totalt"> 0 </span>
+
+                                      <i
+                                        id="btnEscanear"
+                                        class="mdi mdi-24px mdi-barcode-scan text-primary mr-0 float-end"
+                                      ></i>
+                                    </p>
+                                    <div class="input-group input-group-merge">
+                                      <select
+                                        id="prueba"
+                                        name="codigo[]"
+                                        class="select2 form-control select2-multiple"
+                                        data-toggle="select2"
+                                        multiple="multiple"
+                                        data-placeholder="Seleccione ..."
+                                      ></select>
+                                    </div>
+                                  </li>
+                                  <div id="colecta-cantidad-msg" class="mt-2"></div>
+                                </div>
+                                <li class="mb-2" id="card-receptor-observaciones">
+                                  <p class="text-muted mb-1 font-13">
+                                    <i class="mdi mdi-fountain-pen-tip"> </i> OBSERVACIONES
+                                  </p>
+                                  <input class="form-control" type="text" id="receptor-observaciones" />
+                                </li>
+                              </ul>
+                            </div>
+                            <!-- end col -->
+                          </div>
+                          <!-- end row -->
+                          <div class="mb-2 form-group agregarMultimedia">
+                            <div class="multimediaFisica needsclick dz-clickable">
+                              <div class="dz-message needsclick">
+                                <i class="h1 text-muted mdi mdi-camera-plus"></i>
+                                <h4>Dar click para subir imagenes.</h4>
+                              </div>
+                            </div>
+                          </div>
+
+                          <div class="tab-content" id="botones-entrega" style="display: none">
+                            <div class="tab-pane show button-list active" id="block-buttons-preview">
+                              <div class="d-grid">
+                                <button id="boton-entrega-wrong" type="button" class="btn btn-xs btn-danger">
+                                  Cancelar
+                                </button>
+                                <button
+                                  id="boton-entrega-success"
+                                  type="button"
+                                  class="btn btn-xs btn-success guardarProducto"
+                                >
+                                  Aceptar
+                                </button>
+                              </div>
+                            </div>
+                            <!-- end preview-->
+                          </div>
+                          <div class="tab-content" id="botones-no-entrega" style="display: none">
+                            <div class="tab-pane show button-list active" id="block-buttons-preview">
+                              <div class="d-grid">
+                                <button id="boton-no-entrega-wrong" type="button" class="btn btn-xs btn-danger">
+                                  Cancelar
+                                </button>
+                                <button
+                                  id="boton-no-entrega-success"
+                                  type="button"
+                                  class="btn btn-xs btn-success guardarNoEntrega"
+                                >
+                                  Aceptar
+                                </button>
+                              </div>
+                            </div>
+                            <!-- end preview-->
+                          </div>
+                        </div>
+                        <!-- end card body-->
+                      </div>
+                      <!-- end card -->
                     </div>
-                    <span id="card-seguimiento" class="badge bg-secondary"></span>
-                  </div>
-
-                  <h4 id="posicioncliente" class="mb-1"></h4>
-
-                  <div class="d-flex align-items-start gap-2 mb-2">
-                    <i id="icon-direccion" class="mdi mdi-map-marker"></i>
-                    <div id="direccion" class="text-muted"></div>
-                  </div>
-
-                  <div id="observaciones" class="text-muted small mb-2"></div>
-
-                  <div class="mb-3">
-                    <span class="badge bg-primary">Cantidad</span>
-                    <span class="badge bg-secondary" id="card-receptor-cantidad">0</span>
-                  </div>
-
-                  <!-- Bloques que tu JS muestra/oculta -->
-                  <div id="card-receptor-items" style="display: none">
-                    <!-- acá va tu select2 #prueba y #totalt si querés -->
-                  </div>
-
-                  <div id="card-receptor-name" style="display: none">
-                    <input id="receptor-name" class="form-control" placeholder="Nombre receptor" />
-                  </div>
-
-                  <div id="card-receptor-dni" style="display: none" class="mt-2">
-                    <input id="receptor-dni" class="form-control" placeholder="DNI receptor" />
-                  </div>
-
-                  <div id="card-receptor-observaciones" class="mt-2">
-                    <textarea
-                      id="receptor-observaciones"
-                      class="form-control"
-                      rows="2"
-                      placeholder="Observaciones"
-                    ></textarea>
-                  </div>
-
-                  <div class="mt-3" id="botonera" style="display: none"></div>
-                  <div class="mt-3" id="botones-entrega" style="display: none"></div>
-                  <div class="mt-3" id="botones-no-entrega" style="display: none"></div>
-
-                  <button id="btnEscanear" type="button" class="btn btn-warning w-100 mt-3" style="display: none">
-                    Escanear bultos
-                  </button>
-
-                  <div id="alert-cancelar-colecta" class="alert alert-warning mt-2" style="display: none">
-                    Colecta: podés cancelar si corresponde.
                   </div>
                 </div>
               </div>
+
               <!-- HASTA ACA CARD ENVIOS -->
               <div class="row" id="hdractivas"></div>
 
