--- a/SistemaReparto/hdr.html
+++ b/SistemaReparto/hdr.html
@@ -349,7 +349,7 @@
           <!-- ✅ Recorridos = screen (paneles) -->
           <a href="#operacion" class="nav-item active" data-screen="operacion">
             <i class="mdi mdi-map-marker-path"></i>
-            <span>Recorridos</span>
+            <span>Recorrido</span>
           </a>
           <!-- ✅ Warehouse = acción (ir a warehouse.html) -->
           <a href="warehouse.html" class="nav-item" data-action="warehouse">
