--- a/SistemaReparto/warehouse.html
+++ b/SistemaReparto/warehouse.html
@@ -276,12 +276,12 @@
 
           <nav class="app-bottomnav">
             <a href="hdr.html#operacion" class="nav-item">
-              <i class="mdi mdi-map-marker-multiple-outline"></i>
+              <i class="mdi mdi-map-marker-path botonera-icon"></i>
               <span>Recorrido</span>
             </a>
 
             <a href="warehouse.html" class="nav-item active">
-              <i class="mdi mdi-qrcode-scan"></i>
+              <i class="mdi mdi-qrcode-scan botonera-icon"></i>
               <span>Warehouse</span>
             </a>
 
@@ -291,12 +291,12 @@
     </a> -->
 
             <a href="hdr.html#cuenta" class="nav-item">
-              <i class="mdi mdi-account-outline"></i>
+              <i class="mdi mdi-account-outline botonera-icon"></i>
               <span>Cuenta</span>
             </a>
 
             <a href="#" class="nav-item" id="wh-salir">
-              <i class="mdi mdi-reply-outline"></i>
+              <i class="mdi mdi-reply-outline botonera-icon"></i>
               <span>Salir</span>
             </a>
           </nav>
