--- a/SistemaReparto/hdr.html
+++ b/SistemaReparto/hdr.html
@@ -348,12 +348,12 @@
         <nav class="app-bottomnav">
           <!-- ✅ Recorridos = screen (paneles) -->
           <a href="#operacion" class="nav-item active" data-screen="operacion">
-            <i class="mdi mdi-map-marker-path"></i>
+            <i class="mdi mdi-map-marker-path botonera-icon"></i>
             <span>Recorrido</span>
           </a>
           <!-- ✅ Warehouse = acción (ir a warehouse.html) -->
           <a href="warehouse.html" class="nav-item" data-action="warehouse">
-            <i class="mdi mdi-barcode-scan"></i>
+            <i class="mdi mdi-barcode-scan botonera-icon"></i>
             <span>Warehouse</span>
           </a>
 
@@ -363,12 +363,12 @@
           </a> -->
 
           <a href="#cuenta" class="nav-item" data-screen="cuenta">
-            <i class="mdi mdi-account-outline"></i>
+            <i class="mdi mdi-account-outline botonera-icon"></i>
             <span>Cuenta</span>
           </a>
 
           <a href="#" class="nav-item" data-action="logout">
-            <i class="mdi mdi-reply-outline"></i>
+            <i class="mdi mdi-reply-outline botonera-icon"></i>
             <span>Salir</span>
           </a>
         </nav>
